@@ -2194,10 +2194,10 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					RelativePath=".\xbmc\cores\sidplayer\audio\AudioDrv.h">
 				</File>
 				<File
-					RelativePath=".\xbmc\cores\sidplayer\audio\config.h">
+					RelativePath=".\xbmc\cores\sidplayer\config.h">
 				</File>
 				<File
-					RelativePath=".\xbmc\cores\sidplayer\config.h">
+					RelativePath=".\xbmc\cores\sidplayer\audio\config.h">
 				</File>
 				<File
 					RelativePath=".\xbmc\cores\sidplayer\IniConfig.cpp">
@@ -2848,55 +2848,6 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					RelativePath=".\xbmc\lib\sqlLite\sqlitedataset.h">
 				</File>
 			</Filter>
-		</Filter>
-		<Filter
-			Name="osd"
-			Filter="">
-			<File
-				RelativePath=".\xbmc\osd\IExecutor.h">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\IOSDOption.cpp">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\IOSDOption.h">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDMenu.cpp">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\osdmenu.h">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDOptionBoolean.cpp">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDOptionBoolean.h">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDOptionButton.cpp">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDOptionButton.h">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDOptionFloatRange.cpp">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDOptionFloatRange.h">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDOptionIntRange.cpp">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDOptionIntRange.h">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDSubMenu.cpp">
-			</File>
-			<File
-				RelativePath=".\xbmc\osd\OSDSubMenu.h">
-			</File>
 		</Filter>
 		<Filter
 			Name="cdrip"
